# chesspad

./: CMakeLists.txt  chesspadNEW.sln  readme.md
chesspadNEW/: chesspad.h  chesspadNEW.vcxproj  chesspadNEW.vcxproj.filters  chesspadORI.cpp  main.cpp  makefile  openglSupport.cpp  openglSupport.h
chesspadNEW/Release/: CL.read.1.tlog  CL.write.1.tlog  chesspadNEW.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
